--- a/README
+++ b/README
@@ -9,8 +9,7 @@ For the most part, each section linked that page has its own subdirectory
 under ./tutorials/perl6/
 
 
-Currently working on Grammars/.  It's giving me fits.  Pound on through till 
-you understand it.
+Currently working on Grammars/dr_forr/
 
 
 
