--- a/README
+++ b/README
@@ -9,7 +9,9 @@ For the most part, each section linked that page has its own subdirectory
 under ./tutorials/perl6/
 
 
-Currently working on Grammars/dr_forr/
+Check back frequently on Grammars/dr_forr/
+    It's a 6-part blog series.  He's gone through 3 parts so far
+        I'm caught up through part 3
 
 
 
