--- a/README
+++ b/README
@@ -14,7 +14,9 @@ Check back frequently on Grammars/dr_forr/
     It's a 6-part blog series.  He's gone through 3 parts so far
         I'm caught up through part 3
 
+
 While waiting for dr_forr, I'm starting to go through mfriedman's blog.
+    Not finished that yet -- pick up here.
 
 
 
